[workspace]

[workspace.dependencies]
quote = "1.0.26"
proc-macro2 = "1.0.52"

[package]
name = "quasiquote"
description = "quote compatible quasiquote macro with support for interpolating expressions"
version = "0.0.1"
edition = "2021"
authors = ["Fearless Cow"]
license = "GPL-3.0-or-later"
repository = "https://github.com/fearless-cow/quasiquote"
homepage = "https://github.com/fearless-cow/quasiquote"
keywords = ["macro", "quote"]

[dependencies]
quasiquote-proc-macro = { path = "quasiquote-proc-macro", version = "0.0.1" }
quote = { workspace = true }
proc-macro2 = { workspace = true }

[dev-dependencies]
quasiquote-proc-macro = { path = "quasiquote-proc-macro" }
quote = { workspace = true }
proc-macro2 = { workspace = true }
syn = "2.0.12"